# temps-lite-rust

./: .gitignore  Cargo.toml  README.md  api-high-level.tis  api-low-level.tis  build.rs  effects.css  effects.tis  form.css  four-day-forecast.css  main.css  main.htm  main.tis  nav-icon.css  nav-icon.tis  radio.tis  storage.tis  test-data-current.json  test-data-forecast.json  window.tis
app/: LICENSE  api-high-level.tis  api-low-level.tis  autostart.tis  copyright-notice.css  copyright-notice.tis  form.css  main-display.css  main.html  nav-icon.css  radio.css  rubik.css  storage.tis  top-layer.css  tray-icon.tis  until.tis
app/assets/fonts/rubik/: README.txt
app/lang/: dutch.json  french.json  german.json  lang.tis  load-translations.tis
lang/: date-translate.tis  dutch.json  english.json  french.json  german.json  italian.json  lang.css  lang.tis  list.json  spanish.json
locale/: english.json  french.json  german.json  spanish.json
src/: main.rs
