[package]
name = "temps-lite-rust"
version = "2.0.0"
authors = ["GirkovArpa <girkovarpa@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = "*"

[target.'cfg(windows)'.dependencies]
winreg = "0.8"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "temps-lite.exe"
LegalCopyright = "Copyright © GirkovArpa 2021"
FileDescription = "temps-lite: A smart, good-looking little weather app"
ProductName = "temps-lite"
ProductVersion = "2.0.0"

[profile.release]
opt-level = "z"  # Optimize for size.
